syntax = "proto3";

package heartbeatRequestService;

option go_package = "./heartbeatRequestService";

service HeartbeatService {
    rpc HeartbeatRequestGRPC(HeartbeatRequest) returns (HeartbeatResponse);
}

message HeartbeatRequest {
    int32 term = 1;
    string leader = 2;
}

message HeartbeatResponse {
    int32 term = 1;
    bool success = 2;
}
